# milk-price-prediction

./: README.md  pyproject.toml
data/: tidy_data.csv
models/: models.pkl  ts.pkl
notebooks/: 01-EDA.ipynb  02-Regression.ipynb  03-ML.ipynb  04-ML_prediction.ipynb  05-all-in-one.ipynb
notebooks/covariates/: 01 - milk_production.ipynb  02 - population.ipynb  03 - wage_mass.ipynb  04 - uht_milk_market.ipynb  05 - uht_milk_industry.ipynb  06 - total_supply.ipynb  07 - imports.ipynb  08 - exports.ipynb  09 - unemployment.ipynb  utils.py
predictions/: 0 - 2025_predictions.csv  2025_exports.csv  2025_imports.csv  2025_milk_production.csv  2025_population.csv  2025_total_supply.csv  2025_uht_milk_industry.csv  2025_uht_milk_market.csv  2025_unemployment.csv  2025_wage_mass.csv
