[project]
name = "milk-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "mlforecast>=1.0.2",
    "pandas>=2.3.2",
    "plotnine[extra]>=0.15.0",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.2",
]
